<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:drawableLeft="@drawable/ic_email_selctd"
        android:drawablePadding="@dimen/padding_10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_20dp"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="@dimen/text_20sp"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/theme_color"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password_icon_selctd"
        android:drawablePadding="@dimen/padding_20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_20dp"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="@dimen/text_20sp"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="@color/theme_color"
        app:met_primaryColor="?colorAccent" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:background="@drawable/ic_signin_bttn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="@dimen/margin_10dp"
            android:text="Forgot Password?"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_dividing_line"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="New User?"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_40dp"
        android:gravity="center"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="0.7"
            android:background="@drawable/ic_small_dividing_line"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="@string/sign_in_using"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="0.7"
            android:background="@drawable/ic_small_dividing_line"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/ic_fb_bttn"/>

</LinearLayout>